# video-frame-diff-extractor

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  cli.py  crop_processor.py  diff_detector.py  image_writer.py  main.py  progress_reporter.py  video_loader.py
tests/: __init__.py  test_cli.py  test_crop_processor.py  test_diff_detector.py  test_image_writer.py  test_integration.py  test_main.py  test_progress_reporter.py  test_video_loader.py
